<resources>
    <string name="app_name">InventoryAppS2</string>
    <string name="action_settings">Settings</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">Lack of data...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_product">Product</string>
    <string name="category_price">Price</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_supplier_phone">Supplier Phone</string>
    <string name="category_quantity">Quantity</string>
    <string name="button_increase">+</string>
    <string name="button_decrease">-</string>
    <string name="button_sell">SELL</string>
    <string name="category_measurement">Measurement</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_quantity">0</string>
    <string name="hint_product_price">0</string>
    <string name="hint_product_supplier">Supplier Name</string>
    <string name="hint_product_supplier_phone">Phone Number</string>
    <string name="name_query">Please provide name of the product</string>
    <string name="price_query">Please provide price</string>
    <string name="quantity_query">Please provide quantity</string>
    <string name="quantity_warning">Please provide positive quantity</string>
    <string name="supplier_query">Please provide supplier name</string>
    <string name="supplier_phone_query">Please provide supplier phone number</string>
    <string name="button_call">Call to supplier</string>
</resources>
